# bacon_no

./: .env.example  .gitignore  README.md  process_data.py  pyproject.toml
bacon_number/: api.py  app.py  graph.py  models.py  process.py
tests/: test_bacon_number.py
