[tool.poetry]
name = "bacon_number"
version = "0.1.0"
description = ""
authors = ["Charles Soetan <casoetan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.20"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
